--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png"> -->
         <link rel="manifest" href="/site.webmanifest">
-        <title>Đặng Bá Lê Bằng </title>
+        <title>Phong Thuy Co Hanh Be</title>
     </head>
     <body>
         <div class="app">
@@ -23,13 +23,17 @@
                         <img src="./avatar.jpg" alt="" srcset="">
                     </div>
                     <div class="card__title--name">
-                        <h1> Đặng Bá Lê Bằng </h1>
+                        <h1> Phong Thuy Co Hanh Be </h1>
                         <div class="veri__check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p>𝐒𝐀𝐈𝐍𝐓 𝐓𝐇𝐄 𝐆𝐑𝐄𝐀𝐓</p>
+                        <p>Phong Thuỷ Tâm Linh Cô Hạnh Bé
+Chuyên Sakyant - Xăm Phép Cam Khmer Cổ
+Có bán các mặt hàng phong thuy , tâm linh
+link mua sản phẩm👇
+UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
