--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                     </div>
                     <div class="card__title--description">
                         <p>Phong Thuỷ Tâm Linh Cô Hạnh Bé
-Chuyên Sakyant - Xăm Phép Cam Khmer Cổ
-Có bán các mặt hàng phong thuy , tâm linh
+                            Chuyên Sakyant - Xăm Phép Cam Khmer Cổ
+                            Có bán các mặt hàng phong thủy, tâm linh
 link mua sản phẩm👇
-UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
+                            UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
                     <div class="row">
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.facebook.com/h.yennn07/" target="_blank" class="card__link">
+                                <a href="https://www.facebook.com/NgoThuyHanhOfficial/" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-facebook"></i>
                                     </div>
@@ -49,7 +49,16 @@ UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.instagram.com/bangsaint05/" target="_blank" class="card__link">
+                                <a href="https://www.facebook.com/profile.php?id=100083326653378" target="_blank" class="card__link">
+                                    <div class="link__icon">
+                                        <i class="fab fa-facebook"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col col-lg-3 mt-10">
+                            <div class="card__item">
+                                <a href="https://www.instagram.com/codong.be/" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-instagram"></i>
                                     </div>
@@ -58,7 +67,7 @@ UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.tiktok.com/@saint_thegreat/" target="_blank" class="card__link">
+                                <a href="https://www.tiktok.com/@thuyhanhngo955/" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-tiktok"></i>
                                     </div>
@@ -67,34 +76,25 @@ UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://gist.github.com/Bangsaint05/" target="_blank" class="card__link">
+                                <a href="0367178999" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fab fa-github"></i>
+                                        <i class="fas fa-phone-alt" style="color: red;"></i>
                                     </div>
                                 </a>
                             </div>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.youtube.com/channel/UCC3ox8xYQNjezsP361RDs3A" target="_blank" class="card__link">
+                                <a href="https://sites.google.com/view/shopthuyhanh95/trang-ch%E1%BB%A7?authuser=4&fbclid=IwAR2CINZcbdw9naBUswrm8YLUrh9b4dQ7Wrs6_tLpQU6KvD6UtwiIlNxHz8E" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fab fa-youtube" style="color: red;"></i>
+                                        <i class="fa fa-shopping-cart"></i>
                                     </div>
                                 </a>
                             </div>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://me.momo.vn/dangbalebang" target="_blank" class="card__link">
-                                    <div class="link__icon">
-                                        <i class="	fab fa-amazon-pay"></i>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col col-lg-3 mt-10">
-                            <div class="card__item">
-                                <a href="mailto:dang06176@gmail.com" class="card__link">
+                                <a href="mailto:hanhngothuy@gmail.com" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-google" style="color: red;"></i>
                                     </div>
@@ -103,7 +103,7 @@ UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://m.me/h.yennn07/" class="card__link">
+                                <a href="https://m.me/NgoThuyHanhOfficial/" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-facebook-messenger"></i>
                                     </div>
@@ -113,7 +113,7 @@ UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                     </div>
                 </div>
                 <div class="toggle toggle__back">
-                    <a href="https://gist.github.com/Bangsaint05/"><i class="fas fa-arrow-left"></i></a>
+                    <a href="https://zalo.me/0941414734/"><i class="fas fa-arrow-left"></i></a>
                 </div>
                 <div class="toggle toggle__theme">
                     <i class="fas fa-moon"></i>
@@ -121,14 +121,14 @@ UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                 <div class="button__list mt-10">
                     <div class="row">
                         <div class="col col-lg-6 mt-10">
-                            <a href="https://m.me/h.yennn07/" target="_blank">
+                            <a href="https://m.me/NgoThuyHanhOfficial/" target="_blank">
                                 <div class="button button__message ">
                                     <span> Nhắn Tin </span>
                                 </div>
                             </a>
                         </div>
                         <div class="col col-lg-6 mt-10">
-                            <a href="https://www.facebook.com/h.yennn07/" target="_blank">
+                            <a href="https://www.facebook.com/NgoThuyHanhOfficial/" target="_blank">
                                 <div class="button button__subscribe ">
                                     <span> Theo Dõi </span>
                                 </div>
