--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ link mua sản phẩm👇
                             <div class="card__item">
                                 <a href="0367178999" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fas fa-phone-alt" style="color: red;"></i>
+                                        <i class="fas fa-phone-alt' style='font-size:36px" style="color: red;"></i>
                                     </div>
                                 </a>
                             </div>
@@ -87,7 +87,7 @@ link mua sản phẩm👇
                             <div class="card__item">
                                 <a href="https://sites.google.com/view/shopthuyhanh95/trang-ch%E1%BB%A7?authuser=4&fbclid=IwAR2CINZcbdw9naBUswrm8YLUrh9b4dQ7Wrs6_tLpQU6KvD6UtwiIlNxHz8E" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fa fa-shopping-cart"></i>
+                                        <i class="fa fa-shopping-cart" style="font-size:36px"></i>
                                     </div>
                                 </a>
                             </div>
