--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ link mua sản phẩm👇
                             <div class="card__item">
                                 <a href="0367178999" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fas fa-phone-alt' style='font-size:24px" style="color: red;"></i>
+                                        <i class="fas fa-phone" style="color: red;"></i>
                                     </div>
                                 </a>
                             </div>
