--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta content='https://i.imgur.com/5ZFE4bA.jpg' property='og:image' />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
             rel="stylesheet">
@@ -29,13 +30,8 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p>Phong Thuỷ Tâm Linh Cô Hạnh Bé
-                            Chuyên Sakyant - Xăm Phép Cam Khmer Cổ
-                            
-                            Có bán các mặt hàng phong thủy, tâm linh
-link mua sản phẩm👇
-                           
-                            UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
+                        <p>Phong Thuỷ Tâm Linh Cô Hạnh Bé<br> Chuyên Sakyant - Xăm Phép Cam Khmer Cổ<br> Có bán các mặt hàng phong thủy, tâm linh
+link mua sản phẩm👇<br> UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
@@ -80,7 +76,7 @@ link mua sản phẩm👇
                             <div class="card__item">
                                 <a href="0367178999" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fas fa-phone" style="color: red;"></i>
+                                        <i class="fas fa-phone' style='font-size:24px"></i>
                                     </div>
                                 </a>
                             </div>
