--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ link mua sản phẩm👇<br> UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                             <div class="card__item">
                                 <a href="0367178999" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fas fa-mobile"></i>
+                                        <i class='fas fa-mobile' style='font-size:24px'></i>
                                     </div>
                                 </a>
                             </div>
