--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ link mua sản phẩm👇<br> UY TÍN CHẤT LƯƠNG ĐẶT LÊN ĐẦU</p>
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="0367178999" target="_blank" class="card__link">
+                                <a href="https://zalo.me/0367178999" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class='fas fa-mobile' style='font-size:24px'></i>
                                     </div>
